--- a/PROG6212_POE_Part1/MainWindow.xaml
+++ b/PROG6212_POE_Part1/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PROG6212_POE_Part1"
         mc:Ignorable="d"
-        Title="Welcome" Height="300" Width="410">
+        Title="ST10398576_Welcome User" Height="300" Width="410">
     <Grid>
         <Label Content="Contract Monthly Claim System" HorizontalAlignment="Left" Margin="10,12,0,0" VerticalAlignment="Top" Width="178"/>
         <TextBlock HorizontalAlignment="Left" Margin="10,44,0,0" TextWrapping="Wrap" Text="This system is designed to help you manage your monthly claims for the contract you are working on. Please sign in or create an account to proceed" VerticalAlignment="Top" Height="52" Width="391"/>
